tests/compile_fail/no_has_constraint.stderr
error[E0277]: the trait bound `Simple: drizzle::core::HasConstraint<drizzle::core::ForeignKeyK>` is not satisfied
  --> tests/compile_fail/no_has_constraint.rs:17:30
   |
17 |     requires_fk_constraint::<Simple>();
   |                              ^^^^^^ unsatisfied trait bound
   |
   = help: the trait `HasConstraint<drizzle::core::ForeignKeyK>` is not implemented for `Simple`
           but trait `HasConstraint<PrimaryKeyK>` is implemented for it
   = help: for that trait implementation, expected `PrimaryKeyK`, found `drizzle::core::ForeignKeyK`
note: required by a bound in `requires_fk_constraint`
  --> tests/compile_fail/no_has_constraint.rs:13:30
   |
13 | fn requires_fk_constraint<T: HasConstraint<ForeignKeyK>>() {}
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `requires_fk_constraint`
